# agent_security_demo

./: .dockerignore  .env_example  .gitignore  ARTIFACTS.md  README.md  pyproject.toml
a2a_oauth_demo/: README.md  __main__.py  adk_agent_executor.py  test_client.py
a2a_oauth_demo/agents/: calendar_agent.py  greeter_agent.py  orchestrator_agent.py
abac_demo/: README.md  agent.py
abac_demo/tools/: datastore.py
model_armor_demo/: README.md  agent.py  setup_model_armor.py
model_armor_demo/tools/: sensitive_tool.py
oauth_demo/: Dockerfile  README.md  a2a_server.py  agent.py  agent_executor.py  cloudbuild.yaml  set_env.sh
prompt_inspection_demo/: README.md  agent.py
psc_demo/: 01_setup_database.sh  02_setup_psc.sh  03_setup_vpc_sc.sh  04_deploy_agent.py  05_test_agent.py  06_verify_security.sh  CLAUDE.md  README.md  agent.py  requirements.txt  updated_psc_setup.sh  variables.sh
tests/: test_abac_datastore.py  test_model_armor_agent.py  test_prompt_inspection_agent.py
